# s21_BrickGame_v2.0

src/: .Doxyfile  CMakeLists.txt  Game  Makefile  brick_game.cpp
src/brick_game/: model.cpp  model.h
src/brick_game/snake/: backend.h
src/brick_game/snake/backend/: apple.cpp  body.cpp  map.cpp  serv.cpp  snakes.cpp
src/brick_game/snake/backend/inc/: apple.h  body.h  map.h  snakes.h
src/brick_game/snake/tests/: check.cpp
src/brick_game/tetris/: back.h
src/brick_game/tetris/backend/: blocks.c  fsm.c  lines.c  serv.c
src/brick_game/tetris/tests/: check.c
src/controller/: controller.cpp  controller.h
src/gui/cli/: brick_game.cpp  frontend.cpp  frontend.h
src/gui/desktop/: desk.cpp  desk.h  mainwindow.h
